--- a/index.html
+++ b/index.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
     <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
-    <style>
-        *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        }
-        body{
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            width: 100vw;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        canvas{
-            position: absolute;
-        }
-    </style>
 
 </head>
 <body>
-    <video id="video" width="720" height="560" autoplay muted></video>
+    <h1>FaceDETECT</h1>
+    <video id="video" width="720" height="460" autoplay muted></video>
 </body>
 </html>
 
