--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 </head>
 <body>
+    <div class="row-outer">
+        <div class="wrapper">
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
+        </div>
+    </div>
     <h1>FaceDETECT</h1>
     <video id="video" width="720" height="460" autoplay muted></video>
 </body>
